# GenAI-LAb-1

./: .env  README.md  conditional.py  experiments.ipynb  hello.py  langgraph.json  llm.py  main.py  main_graph.py  pyproject.toml  research.md  run_server.py  sdk_test.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
Data/: research.md
customer_care_agent/: README.md  docker-compose.yml  main.py  pgpass  pyproject.toml  sample.py  servers.json
customer_care_agent/customercaredb/: .env  init.sql
graphs/: finance_graph.py  marketing_graph.py
notebook/: experiments.ipynb
novice/: react_demo.py
