[project]
name = "mini-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.15",
    "langchain-core>=1.3.0",
    "langchain-google-genai>=4.2.2",
    "langgraph>=1.1.8",
    "langgraph-cli[inmem]>=0.4.23",
    "python-dotenv>=1.2.2",
]
